--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header {
   background-color: rgb(255, 248, 243);
   background-image: url("./images/developer.png"), url("./images/header_bg.png");
   background-repeat: no-repeat;
-  background-position: bottom left, bottom right;
+  background-position: left center, bottom right;
   margin-bottom: 130px;
 }
 /* Nav */
